# django-models2puml

./: README.md  README.rst  setup.cfg
management/commands/: generatepuml.py
models2puml/: utils.py
models2puml/management/commands/: generatepuml.py
