[metadata]
name = django_models2puml
version = 0.1
description = A Django app to generate PlantUML class diagrams of installed apps models.
long_description = file: README.rst
url = https://github.com/BooDy/django_models2puml
author = Abdelrahman Ghareeb
author_email = abdelrahman@slashproc.net
license = GPL v3.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = find:
